modules/security-group-rules/sg_rules_https.tf
resource "aws_security_group_rule" "ooo_inbound_all_https" {
  for_each          = { for k, v in local.sg_rules_ooo_create : k => v if v["enable_inbound_all_https"] && !v["is_source_sg_enabled"] }
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = each.value["cidr_blocks"]
  security_group_id = lookup(local.sg_create, each.key)["lookup_by_id_enabled"] ? data.aws_security_group.sg_by_id[each.key].id : data.aws_security_group.sg_by_name[each.key].id
}

resource "aws_security_group_rule" "ooo_inbound_all_https_from_sg" {
  for_each                 = { for k, v in local.sg_rules_ooo_create : k => v if v["enable_inbound_all_https_from_sg"] && v["is_source_sg_enabled"] }
  type                     = "ingress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = lookup(local.sg_create, each.key)["lookup_by_id_enabled"] ? data.aws_security_group.sg_by_id[each.key].id : data.aws_security_group.sg_by_name[each.key].id
  source_security_group_id = each.value["source_security_group_id"]
}

resource "aws_security_group_rule" "ooo_outbound_all_https" {
  for_each          = { for k, v in local.sg_rules_ooo_create : k => v if v["enable_outbound_all_https"] && !v["is_source_sg_enabled"] }
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = each.value["cidr_blocks"]
  security_group_id = lookup(local.sg_create, each.key)["lookup_by_id_enabled"] ? data.aws_security_group.sg_by_id[each.key].id : data.aws_security_group.sg_by_name[each.key].id
}

resource "aws_security_group_rule" "ooo_outbound_all_https_to_sg" {
  for_each                 = { for k, v in local.sg_rules_ooo_create : k => v if v["enable_outbound_all_https_to_sg"] && v["is_source_sg_enabled"] }
  type                     = "egress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = lookup(local.sg_create, each.key)["lookup_by_id_enabled"] ? data.aws_security_group.sg_by_id[each.key].id : data.aws_security_group.sg_by_name[each.key].id
  source_security_group_id = each.value["source_security_group_id"]
}
